--- a/src/Components/SideBar/popper.module.css
+++ b/src/Components/SideBar/popper.module.css
@@ -1,7 +1,7 @@
 .sidebar{
     width: 250px;
     height: 100vh;
-    background-color: #313234;
+    /* background-color: #313234; */
     color: #fff;
     position: fixed;
     border-right: 1px solid #3d3b3b;
@@ -15,7 +15,7 @@
   }
   
   .header_container{
-    padding: 6px;
+    padding: 13px;
     box-shadow: inset 100px 100px 100px 100px rgba(0,0,0,0.1);
    display: flex;
    justify-content: space-between;
@@ -64,15 +64,16 @@
 }
 
 .typoHeader{
-  color: grey;
-  font-size: 18px;
-  margin: 30px 100px 10px 0px !important;
+  color: rgb(251 248 248);
+  font-size: 20px !important;
+  margin-top: 30px !important;
+  text-align: center;
 }
 
 .typoColumn{
-  font-size: 20px;
-  margin: 15px 70px 15px 0px !important;
-  color: #626060;
+  font-size: 18px !important;
+  color: #b5b5b5;
+  margin: 20px 0px !important;
 }
 
 .formHeader{
