--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,9 +77,9 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  background-color: #313234;
+  background-color: #000000e2;
+  /* background: linear-gradient(90deg, rgb(0 0 0) 0%, rgba(24,24,24,1) 35%, rgb(0 0 0) 100%);} */
 }
-
 
 html,
 body {
