--- a/src/styles/search.module.css
+++ b/src/styles/search.module.css
@@ -1,58 +1,78 @@
-.name{
-    color: #7d7d7d;; 
-    font-size: 30px !important;
+.name {
+  color: #ffffff;
+  font-size: 30px !important;
+  margin: 20px 0px !important;
 }
 
-.cardContainer{
-    display: flex;
-   flex-wrap: wrap;
-    justify-content: space-evenly;
+.cardContainer {
+  display: flex;
+  flex-wrap: wrap;
+  /* opacity: 0.6; */
+  justify-content: space-evenly;
 }
 .card {
-    /* background-color: hsl(0, 0%, 39%); */
-    width: 400px;
-    border-radius: 20px;
-    height: 700px;
-    margin: 20px;
+  /* background-color: hsl(0, 0%, 39%); */
+  width: 320px;
+  border-radius: 20px;
+  height: 250px;
+  margin: 20px;
 }
 
-.movie_header{
-    font-size: 30px !important;
-    margin: 20px 40px !important;
-    text-align: center;
-    color:#7d7d7d;;
+.movie_header {
+  font-size: 20px !important;
+  /* margin: 20px 40px !important; */
+  /* text-align: center; */
+  color: #f5f5f5;
+  padding: 3px 26px;
 }
 
-.name_container{
-    padding:10px 30px ;
-    display: flex;
-    justify-content: space-between;
+.name_container {
+  padding: 10px 30px;
+  width: 41%;
+  justify-content: space-between;
 }
 
-.title{
-    font-size: 23px !important;
-    padding: 20px 0px;
-    text-align: center;
-    color: #7d7d7d;
+.title {
+  font-size: 18px !important;
+  /* padding: 20px 0px; */
+  /* text-align: center; */
+  color: white;
+  position: relative;
+  top: -40px;
+  opacity: 0.6;
+  height: 36px;
+  padding: 3px 16px;
+  /* margin-left: 10px !important; */
 }
 
-.overview{
-    font-size: 17px !important;
-    padding: 20px;
-    color: #7d7d7d;
+.overview {
+  font-size: 17px !important;
+  padding: 20px;
+  color: #7d7d7d;
 }
 
-.date{
-    color: #7d7d7d;
-    padding: 10px;
-    font-size: 18px !important;
+.date {
+  color: #7d7d7d;
+  padding: 10px;
+  font-size: 18px !important;
 }
 
-.follow{
-    border-radius: 10px;
-    background-color: rgb(118 143 152);
-    border-color: transparent;
-    width: 7rem;
-    color: black;
-    font-size: 17px;
+.follow {
+  border-radius: 10px;
+  background-color:rgb(255 255 255);
+  border-color: transparent;
+  width: 7rem;
+  color: black;
+  height: 28px;
+  font-size: 17px;
+}
+
+.Image_Header {
+  width: 100%;
+  display: flex;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(90deg, rgb(53 51 51) 0%, rgba(24,24,24,1) 35%, rgb(0 0 0) 100%);
+  border-radius: 15px;
+  opacity: 0.9;
+  margin: 28px;
 }
