--- a/src/Components/SideBar/popper.module.css
+++ b/src/Components/SideBar/popper.module.css
@@ -1,7 +1,7 @@
 .sidebar{
     width: 250px;
     height: 100vh;
-    /* background-color: #313234; */
+    background-color: #323232;
     color: #fff;
     position: fixed;
     border-right: 1px solid #3d3b3b;
@@ -13,11 +13,12 @@
   .open{
     left: 0; 
     z-index: 1;
+    background-color: #323232;
     /* Show the sidebar when it's open */
   }
   
   .header_container{
-    padding: 13px;
+    padding: 13px 12px 0px 12px;
     box-shadow: inset 100px 100px 100px 100px rgba(0,0,0,0.1);
    display: flex;
    justify-content: space-between;
@@ -32,6 +33,8 @@
 
 .input_search[type=text]{
     padding: 12px 20px;
+    height: 2.5rem;
+    margin-top: 5px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
@@ -86,4 +89,16 @@
 
 .formHeader a {
   background-color: transparent;
+}
+
+.tooltip {
+  visibility: hidden;
+
+  position: absolute;
+  top: 3.5rem;
+/* Or display: none, depending on how you want it to behave */
+}
+
+.tooltiponhover:hover + .tooltip {    /* Uses the adjacent sibling selector */
+  visibility: visible;  /* Or display: block */
 }
