--- a/src/Components/MainComponent/slider.module.css
+++ b/src/Components/MainComponent/slider.module.css
@@ -66,3 +66,13 @@ Slider container
     width: 70%;
     height: auto;
   }
+
+  .watch{
+    border-radius: 15px;
+    margin-top: 10px;
+    width: 10rem;
+    height: 2.5rem;
+    background: aliceblue;
+    color: black;
+    border: 0;
+  }
