--- a/src/styles/search.module.css
+++ b/src/styles/search.module.css
@@ -2,20 +2,18 @@
   color: #ffffff;
   font-size: 30px !important;
   margin: 20px 0px !important;
+  text-transform: capitalize;
 }
 
-.cardContainer {
+.card {
+  /* background-color: hsl(0, 0%, 39%); */
+  border-radius: 20px;
+  height: 250px;
+  margin: 20px;
   display: flex;
   flex-wrap: wrap;
   /* opacity: 0.6; */
   justify-content: space-evenly;
-}
-.card {
-  /* background-color: hsl(0, 0%, 39%); */
-  width: 320px;
-  border-radius: 20px;
-  height: 250px;
-  margin: 20px;
 }
 
 .movie_header {
@@ -23,12 +21,12 @@
   /* margin: 20px 40px !important; */
   /* text-align: center; */
   color: #f5f5f5;
-  padding: 3px 26px;
+  padding: 19px 24px 3px 0px;
 }
 
 .name_container {
   padding: 10px 30px;
-  width: 41%;
+  width: 53%;
   justify-content: space-between;
 }
 
@@ -58,13 +56,13 @@
 }
 
 .follow {
-  border-radius: 10px;
-  background-color:rgb(255 255 255);
-  border-color: transparent;
-  width: 7rem;
+  border-radius: 8px;
+  margin-top: 10px;
+  width: 10rem;
+  height: 2.5rem;
+  background: aliceblue;
   color: black;
-  height: 28px;
-  font-size: 17px;
+  border: 0;
 }
 
 .Image_Header {
@@ -72,7 +70,15 @@
   display: flex;
   background: rgb(0, 0, 0);
   background: linear-gradient(180deg, rgb(53 51 51) 0%, rgba(24,24,24,1) 35%, rgb(0 0 0) 100%);
-  border-radius: 15px;
+  border-radius: 8px;
   opacity: 0.9;
-  margin: 28px;
+}
+
+.actorDetail {
+  font-size: 17px !important;
+  /* padding: 20px 0px; */
+  /* text-align: center; */
+  color: #888888;
+  /* padding: 24px 0px; */
+  margin-top: 10px !important;
 }
