--- a/src/Components/Movies/MovieItem.module.css
+++ b/src/Components/Movies/MovieItem.module.css
@@ -41,3 +41,41 @@
     /* text-align: center; */
     width: 35%;
 }
+
+.overview  {
+        font-size: 17px;
+        padding: 3px 0rem;
+        color: white
+        /* // marginLeft: "24px" */
+    }
+.overview_title  {
+        font-size: 38px !important;
+        padding: 1rem 0rem;
+        color: rgb(255 255 255);
+        /* font-style: inherit; */
+        font-weight: bold !important;
+        width: 32%;
+        word-wrap: break-word
+    }
+
+.trailer_image { 
+    border-radius: 15px; 
+    height: 27rem;
+	width: 25rem; 
+    margin: 20px 20px; 
+    opacity: 0.3
+}
+
+    @media (max-width: 400px) {
+       .overview_title{
+        width: 100%;
+       }
+
+       .trailer_image {
+        width : 22rem
+       }
+
+       .main_trailer_image{
+        height: 30rem
+       }
+    }
