--- a/src/Components/Upcoming/upcoming.module.css
+++ b/src/Components/Upcoming/upcoming.module.css
@@ -54,3 +54,14 @@
     font-size: 18px;
     opacity: 0.7;
 }
+
+.soonImage{
+    border-radius: 12px;
+}
+
+@media (max-width: 400px) {
+.soonImage{
+    width: 330px
+}
+    
+}
