--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -94,7 +94,7 @@ body {
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)) !important;
 }
 
 a {
