--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,5 +106,18 @@ a {
   html {
     color-scheme: dark;
   }
+
+}
+
+@media (max-width: 400px)
+{
+  body {
+    background: linear-gradient(
+      to bottom,
+      transparent,
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb)) !important;
+  }
 }
 
