--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,7 +40,7 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (max-width: 400px) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -102,7 +102,7 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -120,4 +120,4 @@ a {
     rgb(var(--background-start-rgb)) !important;
   }
 }
-
+ */
