--- a/src/Components/Upcoming/upcoming.module.css
+++ b/src/Components/Upcoming/upcoming.module.css
@@ -55,6 +55,11 @@
     opacity: 0.7;
 }
 
+.celebrities {
+    border-radius: 12px;
+    opacity: 0.6
+}
+
 .soonImage{
     border-radius: 12px;
 }
@@ -62,6 +67,9 @@
 @media (max-width: 400px) {
 .soonImage{
     width: 330px
+}
+.celebrities {
+    width: 21rem
 }
     
 }
