--- a/src/Components/Movies/MovieItem.module.css
+++ b/src/Components/Movies/MovieItem.module.css
@@ -67,7 +67,8 @@
     height: 27rem;
 	width: 25rem; 
     margin: 20px 20px; 
-    opacity: 0.3
+    opacity: 0.6;
+    border: 1px solid #212121
 }
 
     @media (max-width: 400px) {
