--- a/src/Components/Movies/MovieItem.module.css
+++ b/src/Components/Movies/MovieItem.module.css
@@ -2,7 +2,7 @@
     /* display: flex; */
     /* text-align: center; */
     /* margin-top: 30px; */
-    padding: 1rem;
+    /* padding: 1rem; */
     height: 78vh;
 
 }
