--- a/src/Components/MainComponent/slider.module.css
+++ b/src/Components/MainComponent/slider.module.css
@@ -56,10 +56,6 @@ Slider container .slider {
 }
 
 .mainImage {
-  padding: 17pc;
-  clip: rect(50px, 275px, 198px, 142px);
-  background-size: 90pc 50pc !important;
-  background-repeat: no-repeat !important;
   opacity: 0.3;
   border-radius: 8px;
 }
@@ -101,10 +97,8 @@ Slider container .slider {
 }
 
 .reviewCont {
-  margin-top: 35px;
   border: 1px solid #000000;
   height: 100%;
-  padding: 34px;
   background: transparent;
   /* color: black; */
   border-radius: 8px;
@@ -113,13 +107,19 @@ Slider container .slider {
 .reviewCard {
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 2px 1px 4px rgba(255, 255, 255, 0.5);
-  margin-top: 10px;
+  box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.5);
+  margin-top: 30px;
 }
 
 .frame{
   width: 100vw;
   height: 91vh
+
+}
+
+.iframe {
+  border-radius: 8px;
+  opacity: 0.9;
 
 }
 
