--- a/src/Components/Movies/MovieItem.module.css
+++ b/src/Components/Movies/MovieItem.module.css
@@ -1,86 +1,83 @@
-.mainimage{
+.mainimage {
     /* display: flex; */
     /* text-align: center; */
     /* margin-top: 30px; */
     /* padding: 1rem; */
-    height: 78vh;
+    /* height: 78vh; */
 
 }
 
-.mainImageDetail{
+.mainImageDetail {
     padding: 1rem;
     display: flex
 }
 
-.icons{
+.icons {
     margin-top: 33vh;
     font-size: 3pc !important;
 }
 
-.titleHeader{
+.titleHeader {
     display: flex;
-    justify-content: center; 
-     align-items: center;
+    justify-content: center;
+    align-items: center;
     /* padding: 11rem; */
     margin: 1rem 0rem;
 }
 
-.title{
+.title {
     font-size: 30px !important;
     color: #ffffff !important;
     /* width: 12rem; */
 }
 
-.buttn{
-    border: 1px solid white !important;
-    padding: 5px 2px !important;
-    color: aliceblue !important;
+.buttn {
     margin-top: 6px !important;
     justify-content: center;
     display: flex;
     /* text-align: center; */
-    width: 35%;
 }
 
-.overview  {
-        font-size: 17px;
-        padding: 3px 0rem;
-        color: white
+.overview {
+    font-size: 17px;
+    padding: 3px 0rem;
+    color: white
         /* // marginLeft: "24px" */
-    }
-.overview_title  {
-        font-size: 38px !important;
-        padding: 1rem 0rem;
-        color: rgb(255 255 255);
-        /* font-style: inherit; */
-        font-weight: bold !important;
-        width: 32%;
-        word-wrap: break-word
-    }
-
-    .main_trailer_image{
-        height: 30rem
-       }
-
-.trailer_image { 
-    border-radius: 15px; 
-    height: 27rem;
-	width: 25rem; 
-    margin: 20px 20px; 
-    opacity: 0.6;
-    border: 1px solid #212121
 }
 
-    @media (max-width: 400px) {
-       .overview_title{
+.overview_title {
+    font-size: 38px !important;
+    padding: 1rem 0rem;
+    color: rgb(255 255 255);
+    /* font-style: inherit; */
+    font-weight: bold !important;
+    width: 32%;
+    word-wrap: break-word
+}
+
+.main_trailer_image {
+    height: 30rem;
+    width: 29%
+}
+
+.trailer_image {
+    border-radius: 8px;
+    height: 27rem;
+    width: 25rem;
+    opacity: 0.5;
+    border: 1px solid #121212
+}
+
+@media (max-width: 400px) {
+    .overview_title {
         width: 100%;
-       }
-
-       .trailer_image {
-        width : 22rem
-       }
-
-       .frame{
-        width: 23rem
-       }
     }
+
+    .trailer_image {
+        width: 22rem
+    }
+
+    .frame {
+        width: 23rem
+    }
+}
