--- a/src/Components/RelatedDetails/Related.module.css
+++ b/src/Components/RelatedDetails/Related.module.css
@@ -1,22 +1,17 @@
 .related {
-    font-size: 30px !important;
+    /* font-size: 30px !important; */
 }
 
 .active{
     text-decoration: underline;
 }
 
-.heading{
-    font-size: 1.5rem !important;
-}
+
 
 .detail{
-    color: #aaa ;
-    font-size: 18px !important;
-    font-weight: 500 !important;
-    margin: 16px 0 0 !important;
+    margin: 15px 0 0 !important;
 }
 
 .container{
-    margin: 26px 0px;
+    margin: 50px 0px;
 }
