--- a/src/styles/search.module.css
+++ b/src/styles/search.module.css
@@ -1,26 +1,21 @@
 .name {
-  color: #ffffff;
-  font-size: 30px !important;
   margin: 20px 0px !important;
   text-transform: capitalize;
 }
 
 .card {
   /* background-color: hsl(0, 0%, 39%); */
-  border-radius: 20px;
-  height: 250px;
-  margin: 20px;
+  border-radius: 8px;
   display: flex;
   flex-wrap: wrap;
   /* opacity: 0.6; */
-  justify-content: space-evenly;
+  gap: 50px 33px;
+  /* justify-content: space-evenly; */
 }
 
 .movie_header {
-  font-size: 20px !important;
   /* margin: 20px 40px !important; */
   /* text-align: center; */
-  color: #f5f5f5;
   padding: 19px 24px 3px 0px;
 }
 
@@ -75,10 +70,8 @@
 }
 
 .actorDetail {
-  font-size: 17px !important;
   /* padding: 20px 0px; */
   /* text-align: center; */
-  color: #888888;
   /* padding: 24px 0px; */
   margin-top: 10px !important;
 }
