--- a/src/Components/SideBar/popper.module.css
+++ b/src/Components/SideBar/popper.module.css
@@ -123,11 +123,34 @@
   border-radius: 8px;
 }
 
+.x{
+  display: none
+}
+
 
 @media (max-width: 400px) {
   .formHeader {  
     gap: 0px
   }
   
+  .input_search[type="text"] {
+    padding: 12px 7px;
+    margin: 8px
+  }
+
+  .sidebar{
+    width : 100vw;
+    left: -400px;
+  }
+
+  .open{
+    left: 0
+  }
+
+  .x{
+    display: flex;
+    justify-content: end;
+    font-size: 30px;
+  }
   /* Styles for screens with a maximum width of 768 pixels (e.g., mobile devices) */
 }
