--- a/src/Components/Movies/MovieItem.module.css
+++ b/src/Components/Movies/MovieItem.module.css
@@ -4,7 +4,7 @@
     /* margin-top: 30px; */
     /* padding: 1rem; */
     /* height: 78vh; */
-
+    margin: 1px 30px
 }
 
 .mainImageDetail {
@@ -34,6 +34,7 @@
 .buttn {
     justify-content: center;
     display: flex;
+    padding: 1px 8px !important
     /* text-align: center; */
 }
 
@@ -65,6 +66,10 @@
     width: 25rem;
     opacity: 0.5;
     border: 1px solid #121212
+}
+
+.frame {
+    border-radius: 8px
 }
 
 @media (max-width: 400px) {
