--- a/src/Components/SideBar/popper.module.css
+++ b/src/Components/SideBar/popper.module.css
@@ -20,10 +20,10 @@
 }
 
 .header_container {
-  padding: 8px 12px;
+  padding: 8px 30px;
   box-shadow: 5px 1px 9px rgba(255, 255, 255, 0.5);
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   background: #121212;
 }
 
